working on the beginnings of a caching pipeline
Former-commit-id: dedf5790199b63250279801c1c3117ad8a35608d

--- a/protyping/auto-segmentation/sb/06-caching.ipynb
+++ b/protyping/auto-segmentation/sb/06-caching.ipynb
@@ -9,6 +9,7 @@
     "import functools\n",
     "import pathlib\n",
     "import json\n",
+    "import random\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -54,6 +55,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def soft_surface_dice(reference, evaluation):\n",
+    "    edge_reference = skimage.filters.scharr(reference)\n",
+    "    edge_evaluation = skimage.filters.scharr(evaluation)\n",
+    "    \n",
+    "    score = (\n",
+    "        np.sum(np.abs(edge_evaluation - edge_reference)) /\n",
+    "        np.sum(edge_evaluation + edge_reference)\n",
+    "    )\n",
+    "    \n",
+    "    return 1 - score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_uid_cache(relative_paths):\n",
     "    relative_paths = [\n",
     "        str(path) for path in relative_paths\n",
@@ -66,6 +85,7 @@
     "        uid_cache = {\n",
     "            \"ct_image_paths\": {},\n",
     "            \"structure_set_paths\": {},\n",
+    "            \"ct_uid_to_structure_uid\": {},\n",
     "            \"paths_when_run\": []\n",
     "        }\n",
     "    \n",
@@ -75,7 +95,8 @@
     "    dcm_headers = []\n",
     "    for dcm_path in dcm_paths:\n",
     "        dcm_headers.append(pydicom.read_file(\n",
-    "            dcm_path, force=True, specific_tags=['SOPInstanceUID', 'SOPClassUID']))\n",
+    "            dcm_path, force=True, \n",
+    "            specific_tags=['SOPInstanceUID', 'SOPClassUID', 'StudyInstanceUID']))\n",
     "        \n",
     "    ct_image_paths = {\n",
     "        str(header.SOPInstanceUID): str(path)\n",
@@ -89,8 +110,26 @@
     "        if header.SOPClassUID.name == \"RT Structure Set Storage\"\n",
     "    }\n",
     "    \n",
+    "    ct_uid_to_study_instance_uid = {\n",
+    "        str(header.SOPInstanceUID): str(header.StudyInstanceUID)\n",
+    "        for header in dcm_headers\n",
+    "        if header.SOPClassUID.name == \"CT Image Storage\"\n",
+    "    }\n",
+    "    \n",
+    "    study_instance_uid_to_structure_uid = {\n",
+    "        str(header.StudyInstanceUID): str(header.SOPInstanceUID)\n",
+    "        for header in dcm_headers\n",
+    "        if header.SOPClassUID.name == \"RT Structure Set Storage\"\n",
+    "    }\n",
+    "    \n",
+    "    ct_uid_to_structure_uid = {\n",
+    "        ct_uid: study_instance_uid_to_structure_uid[study_uid]\n",
+    "        for ct_uid, study_uid in ct_uid_to_study_instance_uid.items()\n",
+    "    }\n",
+    "    \n",
     "    uid_cache[\"ct_image_paths\"] = ct_image_paths\n",
     "    uid_cache[\"structure_set_paths\"] = structure_set_paths\n",
+    "    uid_cache[\"ct_uid_to_structure_uid\"] = ct_uid_to_structure_uid    \n",
     "    uid_cache[\"paths_when_run\"] = relative_paths\n",
     "    \n",
     "    with open(uid_cache_path, \"w\") as f:\n",
@@ -112,24 +151,8 @@
     "\n",
     "uid_cache = get_uid_cache(relative_paths)\n",
     "ct_image_paths = uid_cache[\"ct_image_paths\"]\n",
-    "structure_set_paths = uid_cache[\"structure_set_paths\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# structure_uid = list(structure_set_paths.items())[0][0]\n",
-    "structure_uid = '1.2.840.10008.5.1.4.1.1.481.3.1574822743'"
+    "structure_set_paths = uid_cache[\"structure_set_paths\"]\n",
+    "ct_uid_to_structure_uid = uid_cache[\"ct_uid_to_structure_uid\"]"
    ]
   },
   {
@@ -138,8 +161,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "structure_set_path = structure_set_paths[structure_uid]\n",
-    "structure_set_path\n",
+    "# ct_uid_to_structure_uid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "structures_to_learn = list(set([item for key, item in names_map.items()]).difference({None}))\n",
+    "structures_to_learn = sorted(structures_to_learn)\n",
+    "structures_to_learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ct_uid = random.choice(list(ct_image_paths.keys()))\n",
+    "ct_uid = '1.2.840.113704.1.111.3156.1551674448.121455'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "structure_uid = ct_uid_to_structure_uid[ct_uid]\n",
+    "structure_uid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "structure_set_path = data_path_root.joinpath(structure_set_paths[structure_uid])\n",
     "\n",
     "structure_set = pydicom.read_file(\n",
     "    structure_set_path, \n",
@@ -196,19 +258,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ct_uid = list(contours_by_ct_uid.keys())[50]\n",
-    "ct_uid = '1.2.840.113704.1.111.2804.1556591059.12956'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ct_path = ct_image_paths[ct_uid]\n",
+    "ct_path = data_path_root.joinpath(ct_image_paths[ct_uid])\n",
     "dcm_ct = pydicom.read_file(ct_path, force=True)\n",
-    "dcm_ct.file_meta.TransferSyntaxUID = pydicom.uid.ImplicitVRLittleEndian"
+    "dcm_ct.file_meta.TransferSyntaxUID = pydicom.uid.ImplicitVRLittleEndian\n",
+    "\n",
+    "ct_size = np.shape(dcm_ct.pixel_array)"
    ]
   },
   {
@@ -228,34 +282,7 @@
     "    Cx, Cy, *_ = position\n",
     "    Ox, Oy = orientation[0], orientation[4]\n",
     "    \n",
-    "    return dx, dy, Cx, Cy, Ox, Oy\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "contours_by_ct_uid[ct_uid].keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "organ = 'rectum'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "original_contours = contours_by_ct_uid[ct_uid][organ]"
+    "    return dx, dy, Cx, Cy, Ox, Oy"
    ]
   },
   {
@@ -329,6 +356,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "contours_on_this_slice = contours_by_ct_uid[ct_uid].keys()\n",
+    "\n",
+    "masks = {}\n",
+    "\n",
+    "for structure in structures_to_learn:\n",
+    "    if not structure in contours_on_this_slice:\n",
+    "        masks[structure] = np.zeros(ct_size) - 1\n",
+    "        \n",
+    "        continue\n",
+    "        \n",
+    "    original_contours = contours_by_ct_uid[ct_uid][structure]\n",
+    "    x_grid, y_grid, masks[structure] = calculate_aliased_mask(original_contours, dcm_ct)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "masks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "x_grid, y_grid, mask_with_aliasing = calculate_aliased_mask(original_contours, dcm_ct)\n",
     "_, _, mask_without_aliasing = calculate_aliased_mask(original_contours, dcm_ct, expansion=1)"
    ]
@@ -371,7 +455,6 @@
     "\n",
     "for contour in contours_with_aliasing:\n",
     "    plt.plot(contour[:,0], contour[:,1])\n",
-    "    plt.plot(contour[:,0], contour[:,1])\n",
     "\n",
     "for xyz in original_contours:\n",
     "    x = np.array(xyz[0::3])\n",
@@ -392,7 +475,6 @@
     "\n",
     "for contour in contours_without_aliasing:\n",
     "    plt.plot(contour[:,0], contour[:,1])\n",
-    "    plt.plot(contour[:,0], contour[:,1])\n",
     "\n",
     "for xyz in original_contours:\n",
     "    x = np.array(xyz[0::3])\n",
@@ -408,18 +490,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def soft_surface_dice(reference, evaluation):\n",
-    "    edge_reference = skimage.filters.scharr(reference)\n",
-    "    edge_evaluation = skimage.filters.scharr(evaluation)\n",
-    "    \n",
-    "    score = (\n",
-    "        np.sum(np.abs(edge_evaluation - edge_reference)) /\n",
-    "        np.sum(edge_evaluation + edge_reference)\n",
-    "    )\n",
-    "    \n",
-    "    return score"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -446,94 +517,6 @@
    "outputs": [],
    "source": [
     "soft_surface_dice(mask_with_aliasing, mask_with_shift)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mask_with_aliasing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mask_without_aliasing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "edge_detection_with_aliasing = skimage.filters.scharr(mask_with_aliasing)\n",
-    "edge_detection_without_aliasing = skimage.filters.scharr(mask_without_aliasing)\n",
-    "edge_detection_with_shift = skimage.filters.scharr(mask_with_shift)\n",
-    "\n",
-    "# mask_with_shift"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.contourf(x_grid, y_grid, edge_detection_with_aliasing)\n",
-    "plt.colorbar()\n",
-    "plt.axis('equal')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.contourf(x_grid, y_grid, edge_detection_without_aliasing)\n",
-    "plt.colorbar()\n",
-    "plt.axis('equal')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.contourf(x_grid, y_grid, edge_detection_with_shift)\n",
-    "plt.colorbar()\n",
-    "plt.axis('equal')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(\n",
-    "    np.sum(np.abs(edge_detection_with_aliasing - edge_detection_without_aliasing)) /\n",
-    "    np.sum(edge_detection_with_aliasing + edge_detection_without_aliasing)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(\n",
-    "    np.sum(np.abs(edge_detection_with_aliasing - edge_detection_with_shift)) /\n",
-    "    np.sum(edge_detection_with_aliasing + edge_detection_with_shift)\n",
-    ")"
    ]
   }
  ],
