create a tfrecord for lenses, eyes and patient only
Former-commit-id: 78cc75ba80c502e87f075cd461a3b2dbabcd713a

--- a/protyping/auto-segmentation/sb/09-lenses-eyes-and-patient-only.ipynb
+++ b/protyping/auto-segmentation/sb/09-lenses-eyes-and-patient-only.ipynb
@@ -430,98 +430,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "contours_by_ct_uid = {}\n",
+    "ct_uids_to_train_on = []\n",
     "\n",
-    "for roi_contour_sequence_item in structure_set.ROIContourSequence:\n",
-    "    try:\n",
-    "        structure_name = number_to_name_map[roi_contour_sequence_item.ReferencedROINumber]\n",
-    "    except KeyError:\n",
+    "for structure_uid, ct_uids in structure_uid_to_ct_uids.items():\n",
+    "    structure_names_in_study_set = set(structure_names_by_structure_set_uid[structure_uid])\n",
+    "    \n",
+    "    if not structure_names_in_study_set.issuperset(\n",
+    "        study_set_filter_must_have_all_of\n",
+    "    ):\n",
     "        continue\n",
-    "\n",
-    "    for contour_sequence_item in roi_contour_sequence_item.ContourSequence:\n",
-    "        ct_uid = contour_sequence_item.ContourImageSequence[0].ReferencedSOPInstanceUID\n",
-    "\n",
+    "        \n",
+    "    for ct_uid in ct_uids:\n",
     "        try:\n",
-    "            _ = contours_by_ct_uid[ct_uid]\n",
+    "            structure_names_on_slice = set(structure_names_by_ct_uid[ct_uid])\n",
     "        except KeyError:\n",
-    "            contours_by_ct_uid[ct_uid] = dict()\n",
-    "\n",
-    "        try:\n",
-    "            contours_by_ct_uid[ct_uid][structure_name].append(contour_sequence_item.ContourData)\n",
-    "        except KeyError:\n",
-    "            contours_by_ct_uid[ct_uid][structure_name] = [contour_sequence_item.ContourData]"
+    "            structure_names_on_slice = set([])\n",
+    "            \n",
+    "        if len(structure_names_on_slice.intersection(slice_filter_at_least_one_of)) == 0:\n",
+    "            continue\n",
+    "            \n",
+    "        if not structure_names_on_slice.issuperset(slice_filter_must_have):\n",
+    "            continue\n",
+    "            \n",
+    "        if len(structure_names_on_slice.intersection(slice_filter_cannot_have)) != 0:\n",
+    "            continue\n",
+    "            \n",
+    "        ct_uids_to_train_on.append(ct_uid)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -529,44 +465,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_ct_uids = list(ct_image_paths.keys())\n",
-    "random.shuffle(all_ct_uids)\n",
-    "\n",
-    "ct_uid = all_ct_uids[0]\n",
-    "ct_uid\n",
-    "\n",
-    "structure_uid = ct_uid_to_structure_uid[ct_uid]\n",
-    "\n",
-    "structure_set_path = data_path_root.joinpath(structure_set_paths[structure_uid])\n",
-    "\n",
-    "structure_set = pydicom.read_file(\n",
-    "    structure_set_path, \n",
-    "    force=True, \n",
-    "    specific_tags=['ROIContourSequence', 'StructureSetROISequence'])\n",
-    "\n",
-    "number_to_name_map = {\n",
-    "    roi_sequence_item.ROINumber: names_map[roi_sequence_item.ROIName]\n",
-    "    for roi_sequence_item in structure_set.StructureSetROISequence\n",
-    "    if names_map[roi_sequence_item.ROIName] is not None\n",
-    "}\n",
-    "\n",
-    "structures_in_study = set([item for _, item in number_to_name_map.items()])\n",
-    "structures_in_study.issuperset(study_set_filter_must_have_all_of)"
+    "# ct_uids_to_train_on"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -574,41 +474,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "contours_by_ct_uid = {}\n",
-    "\n",
-    "for roi_contour_sequence_item in structure_set.ROIContourSequence:\n",
-    "    try:\n",
-    "        structure_name = number_to_name_map[roi_contour_sequence_item.ReferencedROINumber]\n",
-    "    except KeyError:\n",
-    "        continue\n",
-    "\n",
-    "    for contour_sequence_item in roi_contour_sequence_item.ContourSequence:\n",
-    "        ct_uid = contour_sequence_item.ContourImageSequence[0].ReferencedSOPInstanceUID\n",
-    "\n",
-    "        try:\n",
-    "            _ = contours_by_ct_uid[ct_uid]\n",
-    "        except KeyError:\n",
-    "            contours_by_ct_uid[ct_uid] = dict()\n",
-    "\n",
-    "        try:\n",
-    "            contours_by_ct_uid[ct_uid][structure_name].append(contour_sequence_item.ContourData)\n",
-    "        except KeyError:\n",
-    "            contours_by_ct_uid[ct_uid][structure_name] = [contour_sequence_item.ContourData]"
+    "# len({1, 2,3, 4}.intersection({2,3,5}))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -718,11 +585,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_ct_uids = list(ct_image_paths.keys())\n",
-    "random.shuffle(all_ct_uids)\n",
+    "# all_ct_uids = list(ct_image_paths.keys())\n",
+    "# random.shuffle(all_ct_uids)\n",
+    "\n",
+    "random.shuffle(ct_uids_to_train_on)\n",
     "\n",
     "def from_numpy_generator():\n",
-    "    for ct_uid in all_ct_uids:\n",
+    "    for ct_uid in ct_uids_to_train_on:\n",
     "        input_array, output_array = numpy_input_output_from_cache(\n",
     "            ct_uid, structures_to_learn)\n",
     "        input_array = input_array[:,:,None]\n",
@@ -807,7 +676,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tfrecord_path = str(tfrecord_directory.joinpath('test.tfrecord'))\n",
+    "tfrecord_path = str(tfrecord_directory.joinpath(\n",
+    "    'lense-eye-patient.tfrecord'))\n",
     "writer = tf.data.experimental.TFRecordWriter(tfrecord_path)\n",
     "writer.write(serialised_dataset)"
    ]
