update generator to inherit from structures_to_learn size
Former-commit-id: 219c6715e75b1f26fe485708ffbfdd4b1dacf7a5

--- a/protyping/auto-segmentation/sb/09-lenses-eyes-and-patient-only.ipynb
+++ b/protyping/auto-segmentation/sb/09-lenses-eyes-and-patient-only.ipynb
@@ -600,7 +600,10 @@
     "        \n",
     "from_numpy_generator_params = (\n",
     "    (tf.string, tf.int32, tf.float64), \n",
-    "    (tf.TensorShape(()), tf.TensorShape([512, 512, 1]), tf.TensorShape([512, 512, 41]))\n",
+    "    (\n",
+    "        tf.TensorShape(()), \n",
+    "        tf.TensorShape([512, 512, 1]), \n",
+    "        tf.TensorShape([512, 512, len(structures_to_learn)]))\n",
     ")\n",
     "\n",
     "from_numpy_dataset = tf.data.Dataset.from_generator(\n",
