return structure_uid_to_ct_uids also
Former-commit-id: f7c229f2b54da286277a32ddc44296a43dd549a1

--- a/protyping/auto-segmentation/sb/12-moving-into-pymedphys-labs.ipynb
+++ b/protyping/auto-segmentation/sb/12-moving-into-pymedphys-labs.ipynb
@@ -33,6 +33,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Makes it so any changes in pymedphys is automatically\n",
+    "# propagated into the notebook without needing a kernel reset.\n",
+    "from IPython.lib.deepreload import reload\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pymedphys.labs.autosegmentation import indexing, softdice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with open('name_mappings.json') as f:\n",
     "    name_mappings_config = json.load(f)\n",
     "    names_map = name_mappings_config[\"names_map\"]\n",
@@ -123,7 +145,6 @@
    "source": [
     "# Put all of the SASH DICOM data within a directory called 'dicom' in here:\n",
     "data_path_root = pathlib.Path.home().joinpath('.data/dicom-ct-and-structures')\n",
-    "dcm_paths = list(data_path_root.rglob('dicom/**/*.dcm'))\n",
     "\n",
     "# This will be the location of the numpy cache\n",
     "npz_directory = data_path_root.joinpath('npz_cache')\n",
@@ -140,11 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This will be the location of the DICOM header UID cache\n",
-    "uid_cache_path = data_path_root.joinpath(\"uid-cache.json\")\n",
-    "\n",
-    "# This will be the location of structure names by UID cache\n",
-    "structure_names_cache_path = data_path_root.joinpath(\"structure-names-cache.json\")"
+    "ct_image_paths, structure_set_paths, ct_uid_to_structure_uid, structure_uid_to_ct_uids = indexing.get_uid_cache(data_path_root)"
    ]
   },
   {
@@ -166,24 +183,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "relative_paths = [\n",
-    "    path.relative_to(data_path_root)\n",
-    "    for path in dcm_paths\n",
-    "]\n",
-    "\n",
-    "uid_cache = get_uid_cache(relative_paths)\n",
-    "ct_image_paths = uid_cache[\"ct_image_paths\"]\n",
-    "structure_set_paths = uid_cache[\"structure_set_paths\"]\n",
-    "ct_uid_to_structure_uid = uid_cache[\"ct_uid_to_structure_uid\"]\n",
-    "\n",
-    "structure_uid_to_ct_uids = {}\n",
-    "for ct_uid, structure_uid in ct_uid_to_structure_uid.items():\n",
-    "    try:\n",
-    "        structure_uid_to_ct_uids[structure_uid].append(ct_uid)\n",
-    "    except KeyError:\n",
-    "        structure_uid_to_ct_uids[structure_uid] = [ct_uid]\n"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
