--- a/protyping/auto-segmentation/sb/12-moving-into-pymedphys-labs.ipynb
+++ b/protyping/auto-segmentation/sb/12-moving-into-pymedphys-labs.ipynb
@@ -169,47 +169,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "def get_image_transformation_parameters(dcm_ct):\n",
-    "    # From Matthew Coopers work in ../old/data_generator.py\n",
-    "    \n",
-    "    position = dcm_ct.ImagePositionPatient\n",
-    "    spacing = [x for x in dcm_ct.PixelSpacing] + [dcm_ct.SliceThickness]\n",
-    "    orientation = dcm_ct.ImageOrientationPatient\n",
-    "\n",
-    "    dx, dy, *_ = spacing\n",
-    "    Cx, Cy, *_ = position\n",
-    "    Ox, Oy = orientation[0], orientation[4]\n",
-    "    \n",
-    "    return dx, dy, Cx, Cy, Ox, Oy"
+    "structure_names_by_ct_uid, structure_names_by_structure_set_uid = indexing.get_cached_structure_names_by_uids(\n",
+    "    data_path_root, structure_set_paths, names_map)"
    ]
   },
   {
@@ -218,100 +180,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def reduce_expanded_mask(expanded_mask, img_size, expansion):\n",
-    "    return np.mean(np.mean(\n",
-    "        tf.reshape(expanded_mask, (img_size, expansion, img_size, expansion)),\n",
-    "        axis=1), axis=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calculate_aliased_mask(contours, dcm_ct, expansion=5):\n",
-    "    dx, dy, Cx, Cy, Ox, Oy = get_image_transformation_parameters(dcm_ct)\n",
-    "    \n",
-    "    ct_size = np.shape(dcm_ct.pixel_array)\n",
-    "    x_grid = np.arange(Cx, Cx + ct_size[0]*dx*Ox, dx*Ox)\n",
-    "    y_grid = np.arange(Cy, Cy + ct_size[1]*dy*Oy, dy*Oy)\n",
-    "    \n",
-    "    new_ct_size = np.array(ct_size) * expansion\n",
-    "    \n",
-    "    expanded_mask = np.zeros(new_ct_size)\n",
-    "    \n",
-    "    for xyz in contours:\n",
-    "        x = np.array(xyz[0::3])\n",
-    "        y = np.array(xyz[1::3])\n",
-    "        z = xyz[2::3]\n",
-    "\n",
-    "        assert len(set(z)) == 1\n",
-    "\n",
-    "        r = (((y - Cy) / dy * Oy)) * expansion + (expansion - 1) * 0.5\n",
-    "        c = (((x - Cx) / dx * Ox)) * expansion + (expansion - 1) * 0.5\n",
-    "\n",
-    "        expanded_mask = np.logical_or(\n",
-    "            expanded_mask, \n",
-    "            skimage.draw.polygon2mask(new_ct_size, np.array(list(zip(r, c)))))\n",
-    "        \n",
-    "    mask = reduce_expanded_mask(expanded_mask, ct_size[0], expansion)\n",
-    "    mask = 2 * mask - 1\n",
-    "    \n",
-    "    return x_grid, y_grid, mask"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_contours_from_mask(x_grid, y_grid, mask):\n",
-    "    cs = plt.contour(x_grid, y_grid, mask, [0]);\n",
-    "    \n",
-    "    contours = [\n",
-    "        path.vertices for path in cs.collections[0].get_paths()\n",
-    "    ]\n",
-    "    \n",
-    "    plt.close()\n",
-    "    \n",
-    "    return contours"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "structure_names_cache = get_cached_structure_names_by_uids(\n",
-    "    structure_set_paths, names_map)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "structure_names_by_ct_uid = structure_names_cache[\"structure_names_by_ct_uid\"]\n",
-    "structure_names_by_structure_set_uid = structure_names_cache[\n",
-    "    \"structure_names_by_structure_set_uid\"]"
+    "# structure_names_cache"
    ]
   },
   {
