--- a/protyping/auto-segmentation/sb/12-moving-into-pymedphys-labs.ipynb
+++ b/protyping/auto-segmentation/sb/12-moving-into-pymedphys-labs.ipynb
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pymedphys.labs.autosegmentation import indexing, softdice"
+    "from pymedphys.labs.autosegmentation import indexing, softdice, filtering"
    ]
   },
   {
@@ -122,20 +122,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Create masks for the following structures, in the following order\n",
-    "structures_to_learn = [\n",
-    "    'lens_left', 'lens_right', 'eye_left', 'eye_right', 'patient']\n",
-    "\n",
-    "# Only use a study set if all of the following are defined on that study set\n",
-    "study_set_filter_must_have_all_of = set(structures_to_learn)\n",
-    "\n",
-    "# Only use a slice if one of the following contours exists on it\n",
-    "slice_filter_at_least_one_of = set([\n",
-    "    'lens_left', 'lens_right', 'eye_left', 'eye_right'])\n",
-    "slice_filter_must_have = set(['patient'])\n",
-    "slice_filter_cannot_have = set([])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -180,59 +167,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# structure_names_cache"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# structure_names_by_ct_uid"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# structure_names_by_structure_set_uid"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ct_uids_to_train_on = []\n",
+    "# Create masks for the following structures, in the following order\n",
+    "structures_to_learn = [\n",
+    "    'lens_left', 'lens_right', 'eye_left', 'eye_right', 'patient']\n",
     "\n",
-    "for structure_uid, ct_uids in structure_uid_to_ct_uids.items():\n",
-    "    structure_names_in_study_set = set(structure_names_by_structure_set_uid[structure_uid])\n",
-    "    \n",
-    "    if not structure_names_in_study_set.issuperset(\n",
-    "        study_set_filter_must_have_all_of\n",
-    "    ):\n",
-    "        continue\n",
-    "        \n",
-    "    for ct_uid in ct_uids:\n",
-    "        try:\n",
-    "            structure_names_on_slice = set(structure_names_by_ct_uid[ct_uid])\n",
-    "        except KeyError:\n",
-    "            structure_names_on_slice = set([])\n",
-    "            \n",
-    "        if len(structure_names_on_slice.intersection(slice_filter_at_least_one_of)) == 0:\n",
-    "            continue\n",
-    "            \n",
-    "        if not structure_names_on_slice.issuperset(slice_filter_must_have):\n",
-    "            continue\n",
-    "            \n",
-    "        if len(structure_names_on_slice.intersection(slice_filter_cannot_have)) != 0:\n",
-    "            continue\n",
-    "            \n",
-    "        ct_uids_to_train_on.append(ct_uid)"
+    "# Only use a study set if all of the following are defined on that study set\n",
+    "study_set_must_have_all_of = structures_to_learn\n",
+    "\n",
+    "# Only use a slice if one of the following contours exists on it\n",
+    "slice_at_least_one_of = [\n",
+    "    'lens_left', 'lens_right', 'eye_left', 'eye_right']\n",
+    "slice_must_have = ['patient']\n",
+    "slice_cannot_have = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_ct_uids = filtering.filter_ct_uids(\n",
+    "    structure_uid_to_ct_uids,\n",
+    "    structure_names_by_structure_set_uid,\n",
+    "    structure_names_by_ct_uid,\n",
+    "    study_set_must_have_all_of,\n",
+    "    slice_at_least_one_of,\n",
+    "    slice_must_have,\n",
+    "    slice_cannot_have,\n",
+    ")"
    ]
   },
   {
