numpy pipeline appears to be working

--- a/protyping/auto-segmentation/sb/12-moving-into-pymedphys-labs.ipynb
+++ b/protyping/auto-segmentation/sb/12-moving-into-pymedphys-labs.ipynb
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pymedphys.labs.autosegmentation import indexing, softdice, filtering"
+    "from pymedphys.labs.autosegmentation import indexing, softdice, filtering, pipeline"
    ]
   },
   {
@@ -97,20 +97,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# full_list_of_structures = list(set([item for key, item in names_map.items()]).difference({None}))\n",
     "# full_list_of_structures = sorted(full_list_of_structures)\n",
@@ -131,15 +117,7 @@
    "outputs": [],
    "source": [
     "# Put all of the SASH DICOM data within a directory called 'dicom' in here:\n",
-    "data_path_root = pathlib.Path.home().joinpath('.data/dicom-ct-and-structures')\n",
-    "\n",
-    "# This will be the location of the numpy cache\n",
-    "npz_directory = data_path_root.joinpath('npz_cache')\n",
-    "npz_directory.mkdir(parents=True, exist_ok=True)\n",
-    "\n",
-    "# This will be the location of the tfrecord cache\n",
-    "tfrecord_directory = data_path_root.joinpath('tfrecord_cache')\n",
-    "tfrecord_directory.mkdir(parents=True, exist_ok=True)"
+    "data_path_root = pathlib.Path.home().joinpath('.data/dicom-ct-and-structures')"
    ]
   },
   {
@@ -222,66 +200,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_numpy_input_output(ct_uid):\n",
-    "    structure_uid = ct_uid_to_structure_uid[ct_uid]\n",
+    "random.shuffle(filtered_ct_uids)\n",
     "\n",
-    "    structure_set_path = data_path_root.joinpath(structure_set_paths[structure_uid])\n",
-    "\n",
-    "    structure_set = pydicom.read_file(\n",
-    "        structure_set_path, \n",
-    "        force=True, \n",
-    "        specific_tags=['ROIContourSequence', 'StructureSetROISequence'])\n",
-    "    \n",
-    "    number_to_name_map = {\n",
-    "        roi_sequence_item.ROINumber: names_map[roi_sequence_item.ROIName]\n",
-    "        for roi_sequence_item in structure_set.StructureSetROISequence\n",
-    "        if names_map[roi_sequence_item.ROIName] is not None\n",
-    "    }\n",
-    "    \n",
-    "    contours_by_ct_uid = {}\n",
-    "\n",
-    "    for roi_contour_sequence_item in structure_set.ROIContourSequence:\n",
-    "        try:\n",
-    "            structure_name = number_to_name_map[roi_contour_sequence_item.ReferencedROINumber]\n",
-    "        except KeyError:\n",
-    "            continue\n",
-    "\n",
-    "        for contour_sequence_item in roi_contour_sequence_item.ContourSequence:\n",
-    "            ct_uid = contour_sequence_item.ContourImageSequence[0].ReferencedSOPInstanceUID\n",
-    "\n",
-    "            try:\n",
-    "                _ = contours_by_ct_uid[ct_uid]\n",
-    "            except KeyError:\n",
-    "                contours_by_ct_uid[ct_uid] = dict()\n",
-    "\n",
-    "            try:\n",
-    "                contours_by_ct_uid[ct_uid][structure_name].append(contour_sequence_item.ContourData)\n",
-    "            except KeyError:\n",
-    "                contours_by_ct_uid[ct_uid][structure_name] = [contour_sequence_item.ContourData]\n",
-    "                \n",
-    "    ct_path = data_path_root.joinpath(ct_image_paths[ct_uid])\n",
-    "    dcm_ct = pydicom.read_file(ct_path, force=True)\n",
-    "    dcm_ct.file_meta.TransferSyntaxUID = pydicom.uid.ImplicitVRLittleEndian\n",
-    "\n",
-    "    ct_size = np.shape(dcm_ct.pixel_array)\n",
-    "    \n",
-    "    contours_on_this_slice = contours_by_ct_uid[ct_uid].keys()\n",
-    "\n",
-    "    masks = np.nan * np.ones((*ct_size, len(structures_to_learn)))\n",
-    "\n",
-    "    for i, structure in enumerate(structures_to_learn):\n",
-    "        if not structure in contours_on_this_slice:\n",
-    "            masks[:,:,i] = np.zeros(ct_size) - 1\n",
-    "\n",
-    "            continue\n",
-    "\n",
-    "        original_contours = contours_by_ct_uid[ct_uid][structure]\n",
-    "        x_grid, y_grid, masks[:,:,i] = calculate_aliased_mask(original_contours, dcm_ct)\n",
-    "        \n",
-    "    np.shape(masks)\n",
-    "    assert np.sum(np.isnan(masks)) == 0\n",
-    "    \n",
-    "    return dcm_ct.pixel_array, masks"
+    "dataset = pipeline.create_numpy_generator_dataset(\n",
+    "    data_path_root,\n",
+    "    structure_set_paths,\n",
+    "    ct_image_paths,\n",
+    "    ct_uid_to_structure_uid,\n",
+    "    names_map,\n",
+    "    filtered_ct_uids,\n",
+    "    structures_to_learn,\n",
+    ")"
    ]
   },
   {
@@ -290,32 +219,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def numpy_input_output_from_cache(ct_uid, structures_to_learn):\n",
-    "    npz_path = npz_directory.joinpath(f'{ct_uid}.npz')\n",
-    "    structures_to_learn_cache_path = npz_directory.joinpath('structures_to_learn.json')\n",
-    "    \n",
-    "    try:\n",
-    "        with open(structures_to_learn_cache_path) as f:\n",
-    "            structures_to_learn_cache = json.load(f)\n",
-    "    except (FileNotFoundError, json.JSONDecodeError):\n",
-    "        structures_to_learn_cache = []\n",
-    "        \n",
-    "    if structures_to_learn_cache != structures_to_learn:\n",
-    "        logging.warning(\"Structures to learn has changed. Dumping npz cache.\")\n",
-    "        for path in npz_directory.glob('*.npz'):\n",
-    "            path.unlink()\n",
-    "        with open(structures_to_learn_cache_path, \"w\") as f:\n",
-    "            json.dump(structures_to_learn, f)\n",
-    "\n",
-    "    try:\n",
-    "        data = np.load(npz_path)\n",
-    "        input_array = data['input_array']\n",
-    "        output_array = data['output_array']\n",
-    "    except FileNotFoundError:\n",
-    "        input_array, output_array = create_numpy_input_output(ct_uid)\n",
-    "        np.savez(npz_path, input_array=input_array, output_array=output_array)\n",
-    "        \n",
-    "    return input_array, output_array"
+    "for ct_uid, x_grid, y_grid, input_array, output_array in dataset.take(1):\n",
+    "    print(ct_uid)"
    ]
   },
   {
@@ -323,76 +228,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# all_ct_uids = list(ct_image_paths.keys())\n",
-    "# random.shuffle(all_ct_uids)\n",
-    "\n",
-    "random.shuffle(ct_uids_to_train_on)\n",
-    "\n",
-    "def from_numpy_generator():\n",
-    "    for ct_uid in ct_uids_to_train_on:\n",
-    "        input_array, output_array = numpy_input_output_from_cache(\n",
-    "            ct_uid, structures_to_learn)\n",
-    "        input_array = input_array[:,:,None]\n",
-    "        \n",
-    "        yield ct_uid, input_array, output_array\n",
-    "        \n",
-    "from_numpy_generator_params = (\n",
-    "    (tf.string, tf.int32, tf.float64),\n",
-    "    (\n",
-    "        tf.TensorShape(()), \n",
-    "        tf.TensorShape([512, 512, 1]), \n",
-    "        tf.TensorShape([512, 512, len(structures_to_learn)]))\n",
-    ")\n",
-    "\n",
-    "from_numpy_dataset = tf.data.Dataset.from_generator(\n",
-    "    from_numpy_generator, *from_numpy_generator_params)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def _bytes_feature(value):\n",
-    "    value = value.numpy()\n",
-    "    return tf.train.Feature(bytes_list=tf.train.BytesList(value=[value]))\n",
-    "\n",
-    "def serialise(ct_uid, input_array, output_array):\n",
-    "    ct_uid = tf.io.serialize_tensor(ct_uid)\n",
-    "    input_array = tf.io.serialize_tensor(input_array)\n",
-    "    output_array = tf.io.serialize_tensor(output_array)\n",
-    "    \n",
-    "    feature = {\n",
-    "        'ct_uid': _bytes_feature(ct_uid),\n",
-    "        'input_array': _bytes_feature(input_array),\n",
-    "        'output_array': _bytes_feature(output_array),\n",
-    "    }\n",
-    "\n",
-    "    example_proto = tf.train.Example(features=tf.train.Features(feature=feature))\n",
-    "    return example_proto.SerializeToString()\n",
-    "\n",
-    "\n",
-    "for ct_uid, input_array, output_array in from_numpy_dataset.take(1):\n",
-    "    serialise(ct_uid, input_array, output_array)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# # Details on this from https://www.tensorflow.org/tutorials/load_data/tfrecord\n",
-    "# def tf_serialise(ct_uid, input_array, output_array):\n",
-    "#     tf_string = tf.py_function(\n",
-    "#         serialise,\n",
-    "#         (ct_uid, input_array, output_array),\n",
-    "#         tf.string\n",
-    "#     )\n",
-    "#     return tf.reshape(tf_string, ())"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
