writing trf record appears to be working

--- a/protyping/auto-segmentation/sb/12-moving-into-pymedphys-labs.ipynb
+++ b/protyping/auto-segmentation/sb/12-moving-into-pymedphys-labs.ipynb
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pymedphys.labs.autosegmentation import indexing, softdice, filtering, pipeline"
+    "from pymedphys.labs.autosegmentation import indexing, softdice, filtering, pipeline, tfrecord"
    ]
   },
   {
@@ -242,7 +242,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# tfrecord.write_tfrecord('here.tfrecord', dataset)"
+   ]
   },
   {
    "cell_type": "code",
