tf record writing

--- a/protyping/auto-segmentation/sb/12-moving-into-pymedphys-labs.ipynb
+++ b/protyping/auto-segmentation/sb/12-moving-into-pymedphys-labs.ipynb
@@ -243,44 +243,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tfrecord.write_tfrecord('here.tfrecord', dataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# serialised_dataset = from_numpy_dataset.map(tf_serialise)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# serialised_dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tfrecord_path = str(tfrecord_directory.joinpath(\n",
+    "tfrecord_path = str(data_path_root.joinpath(\n",
     "    'lense-eye-patient.tfrecord'))\n",
-    "# writer = tf.data.experimental.TFRecordWriter(tfrecord_path)\n",
-    "# writer.write(serialised_dataset)"
+    "tfrecord.write_tfrecord(tfrecord_path, dataset.take(10))"
    ]
   },
   {
