writing and reading from tfrecord file
Former-commit-id: edcb44cdb6fa7e047658400ffd5e35be67420586

--- a/protyping/auto-segmentation/sb/12-moving-into-pymedphys-labs.ipynb
+++ b/protyping/auto-segmentation/sb/12-moving-into-pymedphys-labs.ipynb
@@ -219,23 +219,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for ct_uid, x_grid, y_grid, input_array, output_array in dataset.take(1):\n",
+    "for ct_uid, x_grid, y_grid, input_array, output_array in dataset.take(15):\n",
     "    print(ct_uid)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -245,7 +231,7 @@
    "source": [
     "tfrecord_path = str(data_path_root.joinpath(\n",
     "    'lense-eye-patient.tfrecord'))\n",
-    "tfrecord.write_tfrecord(tfrecord_path, dataset.take(10))"
+    "tfrecord.write(tfrecord_path, dataset.take(15))"
    ]
   },
   {
@@ -254,10 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%timeit\n",
-    "\n",
-    "for ct_uid, input_array, output_array in from_numpy_dataset.take(100):\n",
-    "    pass"
+    "loaded_dataset = tfrecord.read(tfrecord_path)"
    ]
   },
   {
@@ -266,44 +249,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_dataset = tf.data.TFRecordDataset(tfrecord_path)\n",
-    "raw_dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parse_features = {\n",
-    "    'ct_uid': tf.io.FixedLenFeature([], tf.string),\n",
-    "    'input_array': tf.io.FixedLenFeature([], tf.string),\n",
-    "    'output_array': tf.io.FixedLenFeature([], tf.string),\n",
-    "}\n",
-    "\n",
-    "def _parse_dataset(example_proto):\n",
-    "    parsed = tf.io.parse_single_example(example_proto, parse_features)\n",
-    "    ct_uid = tf.io.parse_tensor(parsed['ct_uid'], tf.string)\n",
-    "    input_array = tf.io.parse_tensor(parsed['input_array'], tf.int32)\n",
-    "    output_array = tf.io.parse_tensor(parsed['output_array'], tf.float64)\n",
-    "\n",
-    "    return ct_uid, input_array, output_array\n",
-    "    \n",
-    "\n",
-    "parsed_dataset = raw_dataset.map(_parse_dataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%timeit\n",
-    "\n",
-    "for ct_uid, input_array, output_array in parsed_dataset.take(100):\n",
-    "    pass"
+    "for ct_uid, x_grid, y_grid, input_array, output_array in loaded_dataset.take(15):\n",
+    "    print(ct_uid)"
    ]
   }
  ],
