move across name mapping verification
Former-commit-id: ed62e4caee45c81448b2fe98b31a486e4c0cfdc9

--- a/protyping/auto-segmentation/sb/12-moving-into-pymedphys-labs.ipynb
+++ b/protyping/auto-segmentation/sb/12-moving-into-pymedphys-labs.ipynb
@@ -76,32 +76,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Used to verify that all structures have either been ignored or mapped to a name\n",
-    "\n",
-    "# names = set()\n",
-    "\n",
-    "# for uid, path in structure_set_paths.items():\n",
-    "#     dcm = pydicom.read_file(\n",
-    "#         path, force=True, specific_tags=['StructureSetROISequence'])\n",
-    "#     for item in dcm.StructureSetROISequence:\n",
-    "#         names.add(item.ROIName)\n",
-    "\n",
-    "# mapped_names = set(names_map.keys())\n",
-    "# print(mapped_names.difference(names))\n",
-    "# names.difference(mapped_names)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# full_list_of_structures = list(set([item for key, item in names_map.items()]).difference({None}))\n",
-    "# full_list_of_structures = sorted(full_list_of_structures)\n",
-    "# full_list_of_structures"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -145,6 +127,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Used to verify that all structures have either been ignored or mapped to a name\n",
+    "filtering.verify_all_names_have_mapping(structure_set_paths, names_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_list_of_structures = list(set([item for key, item in names_map.items()]).difference({None}))\n",
+    "full_list_of_structures = sorted(full_list_of_structures)\n",
+    "full_list_of_structures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create masks for the following structures, in the following order\n",
     "structures_to_learn = [\n",
     "    'lens_left', 'lens_right', 'eye_left', 'eye_right', 'patient']\n",
@@ -174,24 +177,6 @@
     "    slice_must_have,\n",
     "    slice_cannot_have,\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ct_uids_to_train_on"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# len({1, 2,3, 4}.intersection({2,3,5}))"
    ]
   },
   {
